todo-app: finalize todo app

--- a/1-todo-app-node-express/package.json
+++ b/1-todo-app-node-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app-node-express",
+  "name": "1-todo-app-node-express",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
